<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add__task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorWhite"
    tools:context="com.iiitd.prince.assignmentfour.Add_Task">

    <LinearLayout
        android:id="@+id/add_task_wrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Title"
            android:textColor="@color/colorBlack"
            android:layout_weight="1"
            android:textSize="20dp"/>
        <EditText
            android:id="@+id/add_task_box_title"
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:hint="@string/Pleasetitle"
            android:layout_weight="1"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:text="@string/Detail"
            android:layout_weight="1"
            android:textSize="20dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="20"
            android:lines="8"
            android:minLines="6"
            android:gravity="top|left"
            android:maxLines="6"
            android:hint="@string/Pleasedetail"
            android:id="@+id/add_task_box_detail"
            android:layout_weight="1"
            />


        <Button
            android:id="@+id/add_task_button"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_task_button"
            android:layout_weight=".3"
            android:textColor="@color/colorPrimary"
            android:background="@color/colorWhite"
            />

    </LinearLayout>






</RelativeLayout>
